KinD/TraefiKind3/releases/temp/traefik/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: ${TRAEFIK_NAMESPACE}
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          # image: traefik:v3.0.0-rc1
          image: traefik:v3.0.1
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "64Mi"
          args:
            - --api.insecure
            - --providers.kubernetesingress

            # Enable tracing
            - --tracing=true
            - --tracing.serviceName=traefik
            - --tracing.otlp=true
            - --tracing.otlp.grpc=true
            - --tracing.otlp.grpc.endpoint=otelcollector:4317
            - --tracing.otlp.grpc.insecure=true
          ports:
            - name: web
              containerPort: 80
              # hostPort: 80
            - name: websec
              containerPort: 443
              # hostPort: 443
            - name: webhigh
              containerPort: 8080
              # hostPort: 8080
            - name: dashboard
              containerPort: 8888
              # hostPort: 8888
            - name: webhighsec
              containerPort: 8443
              # hostPort: 8443
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Equal"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"
